clusters/k4/kubernetes/components/namespace-priv/networkpolicy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: namespace-network-policy
spec:
  description: "Allow nothing in ingress and allow only dns in egress for the namespace where this object is created"
  endpointSelector:
    matchLabels:
      {}
  ingress:
    - {}
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: "ANY"
          rules:
            dns:
              - matchPattern: "*"
